test/testdata/classes/not_indexable_error.lox
class Foo {}
Foo[0]; // error: 'Foo class' value is not indexable
